--- a/views/index.html
+++ b/views/index.html
@@ -7,8 +7,32 @@
 	<script type="text/javascript" src="../controllers/logic.js"></script>
 	<script type="text/javascript" src="../controllers/fraccion.js"></script>
 	<script type="text/javascript" src="../controllers/matriz.js"></script>
+	<script type="text/javascript" src="../controllers/bootstrap.min.js"></script>
+    <link href="../css/bootstrap.min.css" rel="stylesheet">
+    <link href="../css/style.css" rel="stylesheet">
 </head>
-<body ng-app="proyectoLineal">
-	<matriz columnas=1 filas=2></matriz>
+<body>
+	<nav class="navbar navbar-inverse navbar-fixed-top">
+	</nav>
+	<div class="container theme-showcase" role="main">
+		<!-- <div class="matriz">
+			<table>
+				<tbody>
+					<tr>
+						<td class="elemento">
+							<input class="elemento" type="text" name="a11">
+						</td>
+						<td class="elemento">
+							<input class="elemento" type="text" name="a11">
+						</td>
+						<td class="elemento">
+							<input class="elemento" type="text" name="a11">
+						</td>
+					</tr>
+				</tbody>
+			</table>
+			
+		</div> -->
+	</div>
 </body>
 </html>
